[project]
name = "python-template"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
requires-python = ">=3.11"
dependencies = [
    "beautifulsoup4>=4.13.3",
    "matplotlib>=3.10.1",
    "numpy>=2.2.4",
    "pandas>=2.2.3",
    "ydata-profiling>=4.6.4",
    "requests>=2.32.3",
    "schedule>=1.2.2",
    "seaborn>=0.13.2",
]
